force-app/main/default/objects/Customer_Asset_Shipping_Summary__c/Customer_Asset_Shipping_Summary__c.object-meta.xml
<CustomObject>
    <label>Customer Asset Shipping Summary</label>
    <nameField>
        <displayFormat>ASU-{0}</displayFormat>
        <label>Custmer Asset Shipping Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Asset Shipping Summaries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>