force-app/main/default/objects/Customer_Asset_Shipping_Summary__c/fields/Actual_Shipped_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Actual_Shipped_Quantity__c</fullName>
    <label>Actual Shipped Quantity</label>
    <summarizedField>Customer_Asset_Shipping_Actual__c.Actual_Shipped_Quantity__c</summarizedField>
    <summaryForeignKey>Customer_Asset_Shipping_Actual__c.Customer_Asset_Shipping_Summary__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>