force-app/main/default/objects/Customer_Asset_Shipping_Summary__c/fields/Count_of_C_A_S_E_s__c.field-meta.xml
<CustomField>
    <fullName>Count_of_C_A_S_E_s__c</fullName>
    <label>Count of C.A.S.E.s</label>
    <summaryForeignKey>Customer_Asset_Shipping_Estimate__c.Customer_Asset_Shipping_Summary__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>