force-app/main/default/objects/Customer_Asset_Shipping_Summary__c/fields/Estimated_Shipping_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Shipping_Quantity__c</fullName>
    <label>Estimated Shipping Quantity</label>
    <summarizedField>Customer_Asset_Shipping_Estimate__c.Estimated_Shipping_Quantity__c</summarizedField>
    <summaryForeignKey>Customer_Asset_Shipping_Estimate__c.Customer_Asset_Shipping_Summary__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>